// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentLeftNavHamburgerButton renders per snapshot 1`] = `
<LeftNavHamburgerButton
  ariaLabel="Assessment - all tests and requirements list"
  className="some-class"
  isSideNavOpen={false}
  setSideNavOpen={null}
/>
`;

exports[`FastPassLeftNavHamburgerButton renders per snapshot 1`] = `
<LeftNavHamburgerButton
  ariaLabel="FastPass - all tests list"
  className="some-class"
  isSideNavOpen={false}
  setSideNavOpen={null}
/>
`;

exports[`QuickAssessLeftNavHamburgerButton renders per snapshot 1`] = `
<LeftNavHamburgerButton
  ariaLabel="Quick Assess - all tests and requirements list"
  className="some-class"
  isSideNavOpen={false}
  setSideNavOpen={null}
/>
`;
